--- a/Exercise 3/03_Exercise.Rmd
+++ b/Exercise 3/03_Exercise.Rmd
@@ -46,12 +46,16 @@ knitr::opts_knit$set(root.dir = "./Additional files")  # Changed working directo
 \newcommand{\bfy}{\mathbf{y}}
 \newcommand{\bff}{\mathbf{f}}
 \newcommand{\bfzero}{\mathbf{0}}
+\newcommand{\bfz}{\mathbf{z}}
+\newcommand{\bfu}{\mathbf{u}}
 \newcommand{\bfeta}{\boldsymbol{\eta}}
 \newcommand{\dtheta}{\, \mathrm{d} \theta}
+\newcommand{\dx}{\, \mathrm{d} x}
+\newcommand{\dy}{\, \mathrm{d} y}
 \newcommand{\RR}{\mathbb{R}}
 \newcommand{\e}{\mathrm{e}}
-\newcommand{\vect}[1]{\ensuremath{\boldsymbol{\mathbf{#1}}}}  % vector
-\newcommand{\matr}[1]{\ensuremath{\boldsymbol{\mathbf{#1}}}}  % matrix
+\newcommand{\vect}[1]{\ensuremath{\boldsymbol{\mathbf{#1}}}}  <!-- vector -->
+\newcommand{\matr}[1]{\ensuremath{\boldsymbol{\mathbf{#1}}}}  <!-- matrix -->
 
 
 ```{r libraries and help files, eval = TRUE, echo = FALSE}
@@ -347,6 +351,74 @@ result
 [//]: # ----------------------------------------------------------------------------------------------------------------
 
 ## Subproblem 4.
+We now wish to find an analytical formula for $f_{Z_i, \, U_i}(z_i, u_i \mid \lambda_0, \lambda_1)$. We start by noting that $u_i \in \{ 0, 1  \}$, so we treat the two cases individually. We can then find the CDF
+\begin{align*}
+  F_{Z_i}(z_i \mid u_i = 1, \lambda_0, \lambda_1) &= \Pr(X_i \leq z_i, Y_i \leq X_i) = \int_0^{z_i} \int_0^x f_X(x \mid \lambda_0) f_Y(y \mid \lambda_1) \dy \dx
+  \\
+  &= \int_0^{z_i} \int_0^x \lambda_0 \e^{-\lambda_0 x} \lambda_1 \e^{-\lambda_1 y} \dy \dx = \int_0^{z_i} \lambda_0 \e^{-\lambda_0 x} (1 - \e^{-\lambda_1 x}) \dx
+  \\
+  &= \lambda_0 \int_0^{z_i} (\e^{-\lambda_0 x} - \e^{-(\lambda_0 +\lambda_1) x}) \dx = 1 - \e^{-\lambda_0 z_i} + \frac{\lambda_0}{\lambda_0 + \lambda_1} [ \e^{-(\lambda_0 + \lambda_1) z_i} - 1 ],
+\end{align*}
+which by differentiating with respect to $z_i$ gives the PDF
+$$
+  f_{Z_i}(z_i \mid u_i = 1, \lambda_0, \lambda_1) = \lambda_0 \e^{-\lambda_0 z_i} - \lambda_0 \e^{-(\lambda_0 + \lambda_1) z_i} = \lambda_0 \e^{-\lambda_0 z_i} ( 1 - \e^{-\lambda_1 z_i} ).
+$$
+We can then do the same for the case when $u_i = 0$, giving
+$$
+  f_{Z_i}(z_i \mid u_i = 0, \lambda_0, \lambda_1) = \lambda_1 \e^{-\lambda_1 z_i} ( 1 - \e^{-\lambda_0 z_i} ),
+$$
+which can also be seen from the symmetric properties of the problem. It then follows that the quantity we wanted is
+$$
+  f_{Z_i, \, U_i}(z_i, u_i \mid \lambda_0, \lambda_1) =
+  \begin{cases}
+    \lambda_1 \e^{-\lambda_1 z_i} ( 1 - \e^{-\lambda_0 z_i} ) & \text{for } u_i = 0,
+    \\
+    \lambda_0 \e^{-\lambda_0 z_i} ( 1 - \e^{-\lambda_1 z_i} ) & \text{for } u_i = 1.
+  \end{cases}
+$$
+
+We also want to find the maximum likelihood estimators $\hat{\lambda}_0$ and $\hat{\lambda}_1$, and we then find the likelihood function
+$$
+  L(\lambda_0, \lambda_1 \mid \bfz, \bfu) = \prod_{i=1}^n f_{Z_i, \, U_i}(z_i, u_i \mid \lambda_0, \lambda_1) = \prod_{i \colon u_i=0} \lambda_1 \e^{-\lambda_1 z_i} ( 1 - \e^{-\lambda_0 z_i} ) \prod_{i \colon u_i=1} \lambda_0 \e^{-\lambda_0 z_i} ( 1 - \e^{-\lambda_1 z_i} ).
+$$
+The log-likelihood function is then
+$$
+  \ell(\lambda_0, \lambda_1 \mid \bfz, \bfu) = \sum_{i \colon u_i=0} \ln[\lambda_1 \e^{-\lambda_1 z_i} ( 1 - \e^{-\lambda_0 z_i} )] + \sum_{i \colon u_i=1} \ln[\lambda_0 \e^{-\lambda_0 z_i} ( 1 - \e^{-\lambda_1 z_i} )].
+$$
+We optimize this in the following code block using the `optim()` function in `R`.
+
+```{r MLE log-likelihood}
+
+# Defining the log-likelihood function. Note that it has to be defined
+# as the negative of what was discussed earlier to make optim() find
+# the maximum value, and not the minimum:
+log_likelihood <- function(lambdas, z, u) {
+  u0s <- which(u == 0)  # Indexes where u = 0
+  u1s <- which(u == 1)  # Indexes where u = 1
+  ll <- sum(log(lambdas[2] * exp(-lambdas[2]*z[u0s]) * (1 - exp(-lambdas[1]*z[u0s])))) +
+        sum(log(lambdas[1] * exp(-lambdas[1]*z[u1s]) * (1 - exp(-lambdas[2]*z[u1s]))))
+  return(-ll)
+}
+
+# Doing the optimization:
+MLE <- optim(par = c(1, 1), fn = log_likelihood, z = z, u = u)
+MLE$par
+
+```
+
+We see then that the maximum likelihood estimators are $\hat{\boldsymbol{\lambda}}_\mathrm{MLE} = \begin{bmatrix} 3.465890 & 9.351103 \end{bmatrix}^\top$. The absolute difference between the MLE and the EM estimators are shown below.
+
+```{r MLE and EM}
+
+abs(MLE$par - EM_result$lambda)
+
+```
+
+Se we see that the difference between the two estimators are small.
+
+There are some advantages in optimizing the likelihood directly compared to using the EM algorithm. One of the advantages is that the EM algorithm can be very slow, especially depending on the "amount" of missing data. Also for MLE, only one optimization is necessary, wile for the EM algorithm the parameterized function may need to be optimized iteratively.
+
+
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
 [//]: # ----------------------------------------------------------------------------------------------------------------
